--- a/index.html
+++ b/index.html
@@ -11,6 +11,12 @@
       <div class="jumbotron">
         <h1>OPTC Box Importer</h1>
         <p>This website uses OpenCV.js to detect your OPTC box contents.</p>
+        <img id="scorner" src="images/scorner.png"></canvas>
+        <img id="dcorner" src="images/dcorner.png"></canvas>
+        <img id="qcorner" src="images/qcorner.png"></canvas>
+        <img id="pcorner" src="images/pcorner.png"></canvas>
+        <img id="icorner" src="images/icorner.png"></canvas>
+        <img id="xcorner" src="images/xcorner.png"></canvas>
         <ul id="compares">
           <img id="compare"/>
         </ul>
