First version using type comparison

--- a/index.html
+++ b/index.html
@@ -88,6 +88,7 @@
       </div>
     </div>
     <div class="modal"></div>
+    <script src="data.js" type="text/javascript"></script>
     <script src="index.js" type="text/javascript"></script>
     <script async src="opencv.js" onload="onOpenCvReady();" type="text/javascript"></script>
   </body>
