Hide corner compares

--- a/index.html
+++ b/index.html
@@ -11,12 +11,12 @@
       <div class="jumbotron">
         <h1>OPTC Box Importer</h1>
         <p>This website uses OpenCV.js to detect your OPTC box contents.</p>
-        <img id="scorner" src="images/scorner.png"></canvas>
-        <img id="dcorner" src="images/dcorner.png"></canvas>
-        <img id="qcorner" src="images/qcorner.png"></canvas>
-        <img id="pcorner" src="images/pcorner.png"></canvas>
-        <img id="icorner" src="images/icorner.png"></canvas>
-        <img id="xcorner" src="images/xcorner.png"></canvas>
+        <img id="scorner" src="images/scorner.png" style="display: none"></canvas>
+        <img id="dcorner" src="images/dcorner.png" style="display: none"></canvas>
+        <img id="qcorner" src="images/qcorner.png" style="display: none"></canvas>
+        <img id="pcorner" src="images/pcorner.png" style="display: none"></canvas>
+        <img id="icorner" src="images/icorner.png" style="display: none"></canvas>
+        <img id="xcorner" src="images/xcorner.png" style="display: none"></canvas>
         <ul id="compares">
           <img id="compare"/>
         </ul>
@@ -28,7 +28,7 @@
               Original Image
             </div>
             <div class="card-block text-center">
-              <img id="imageOriginal" alt="Upload" style="width: 4000px, height: 4000px"/>
+              <img id="imageOriginal" alt="Upload"/>
             </div>
             <div class="card-footer text-muted">
               <input type="file" id="imageInput" name="file" />
