--- a/public/index.html
+++ b/public/index.html
@@ -14,7 +14,7 @@
     />
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta.2/css/bootstrap.min.css" integrity="sha384-PsH8R72JQ3SOdhVi3uxftmaW6Vc51MKb0q5P2rRUpPvrszuE4W1povHYgTpBfshb" crossorigin="anonymous">
-    <title>OPTC Box Exporter</title>
+    <title>OPTC Box Manager</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
